--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>fudan.today</title>
+  <title>fdxk.info</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -54,7 +54,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but fudan.today doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but fdxk.info doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
